# jellifyn-genre-editor

./: .bumpver.toml  .env.example  README.md  main.py  openapi.json  pyproject.toml
app/cli/: main.py  parser.py
app/cli/commands/: __init__.py  analyze.py  config.py  edit.py  initialize.py  logs.py  remove.py  version.py
app/cli/utils/: __init__.py  table_report.py
app/enums/: __init__.py  edit_status.py  item_type.py
app/errors/: __init__.py  api_error.py  auth_error.py  base_error.py  connection_error.py  timeout_error.py  validation_error.py
app/schemas/: __init__.py  album_schema.py  artist_schema.py  edit_result.py  edit_task.py  genre_item_schema.py  tracks_schema.py
app/services/: genre_editor.py  genre_editor_cli.py  genre_processor.py  jellyfin_client_service.py  jellyfin_parser.py
app/settings/: app_logs_settings.py  app_settings.py  app_version.py  bootstrap.py  env_content_file.py  env_file_path.py
